[gd_scene load_steps=4 format=3 uid="uid://dfxia4yhqfq1j"]

[ext_resource type="Script" path="res://src/map_obj/bounce.gd" id="1_awebp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h0faj"]
radius = 74.027

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbh8s"]
size = Vector2(71.5, 30.5)

[node name="bounce" type="Node2D"]
script = ExtResource("1_awebp")

[node name="bounce_body" type="AnimatableBody2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce_body"]
position = Vector2(34, 34)
shape = SubResource("CircleShape2D_h0faj")

[node name="ColorRect" type="ColorRect" parent="bounce_body"]
offset_right = 71.0
offset_bottom = 67.0
color = Color(1, 0, 1, 1)

[node name="bounce_area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce_area"]
position = Vector2(36.25, 52.25)
shape = SubResource("RectangleShape2D_wbh8s")

[connection signal="body_entered" from="bounce_area" to="." method="_on_bounce_area_body_entered"]
[connection signal="body_exited" from="bounce_area" to="." method="_on_bounce_area_body_exited"]
